refactor: 优化GroupService和SessionService中的代码，使用getFirst()替代get(0)以提高可读性，并移除未使用的GroupRepository依赖